--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "saltcorn-markdown",
+  "name": "@saltcorn/markdown",
   "version": "0.0.1",
   "description": "Markdown field plugin",
   "main": "markdown.js",
   "dependencies": {
-    "saltcorn-markup": "^0.0.1",
+    "@saltcorn/markup": "^0.0.1",
     "markdown-it": "^10.0.0"
   },
   "author": "Tom Nielsen",
