--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "markdown.js",
   "dependencies": {
     "@saltcorn/markup": "^0.0.8",
-    "markdown-it": "^10.0.0"
+    "markdown-it": "^10.0.0",
+    "markdown-it-for-inline": "^0.1.1"
   },
   "author": "Tom Nielsen",
   "license": "MIT",
