--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@saltcorn/markdown",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Markdown field plugin",
   "main": "markdown.js",
   "dependencies": {
     "@saltcorn/markup": "^0.0.8",
-    "markdown-it": "^10.0.0",
-    "markdown-it-for-inline": "^0.1.1"
+    "markdown-it": "10.0.0",
+    "markdown-it-for-inline": "0.1.1"
   },
   "author": "Tom Nielsen",
   "license": "MIT",
